--- a/VTAdmin/MainWindow.xaml
+++ b/VTAdmin/MainWindow.xaml
@@ -1,8 +1,57 @@
 ﻿<Window x:Class="VTAdmin.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
-    <Grid>
-        
-    </Grid>
+        xmlns:dc="clr-namespace:VTDataContracts;assembly=VTDataContracts"
+        xmlns:local="clr-namespace:VTAdmin"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+        mc:Ignorable="d" 
+        Title="VT Admin" Height="350" Width="525">
+    <Window.Resources>
+        <dc:AdminDataSet x:Key="dsModel" />
+        <CollectionViewSource x:Key="vsServiceType" Source="{Binding TransitService, Source={StaticResource dsModel}}"
+                               d:IsDataSource="True" />
+
+    </Window.Resources>
+    <DockPanel HorizontalAlignment="Stretch" VerticalAlignment="Stretch" >
+        <Menu VerticalAlignment="Top" DockPanel.Dock="Top">
+            <MenuItem Header="File">
+                <MenuItem Header="_Exit" />
+            </MenuItem>
+        </Menu>
+        <StatusBar x:Name="sbMain" DockPanel.Dock="Bottom">
+            <StatusBarItem>
+                <TextBox Name="lblSt1" Text="Status1" />
+            </StatusBarItem>
+        </StatusBar>
+        <TabControl >
+            <TabItem Header="Routes">
+                <Grid Background="#FFE5E5E5">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition/>
+                        <ColumnDefinition/>
+                        <ColumnDefinition/>
+                    </Grid.ColumnDefinitions>
+                    <DockPanel LastChildFill="False" VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
+                        <StackPanel DockPanel.Dock="Bottom" Orientation="Horizontal" >
+                            <Button Content="Save" Margin="3,0" Padding="3,1"/>
+                            <Button Content="Reload" Padding="3,1" Margin="3,0"/>
+
+                        </StackPanel>
+                        
+                        <StackPanel >
+                            <ListBox MinWidth="50" HorizontalAlignment="Stretch" Name="lbServiceType" ItemsSource="{Binding /Description, Source={StaticResource vsServiceType}}"/>
+
+                        </StackPanel>
+
+                    </DockPanel>
+                </Grid>
+            </TabItem>
+            <TabItem Header="Mapped">
+                <Grid Background="#FFE5E5E5"/>
+            </TabItem>
+        </TabControl>
+
+    </DockPanel>
+
 </Window>
